<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:padding="40dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/signup_message"
        android:gravity="center"
        android:textSize="30sp"
        android:id="@+id/tvSignup"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:hint="@string/signup_first_name"
        android:layout_below="@id/tvSignup"
        android:id="@+id/etFirstName"/>


    <EditText
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:hint="@string/signup_last_name"
        android:layout_below="@id/tvSignup"
        android:id="@+id/etLastName"
        android:layout_toRightOf="@id/etFirstName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textEmailAddress"
        android:hint="@string/signup_email"
        android:layout_below="@id/etFirstName"
        android:id="@+id/etEmail"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:hint="@string/signup_password"
        android:layout_below="@id/etEmail"
        android:id="@+id/etPassword"
        android:inputType="textPassword"/>


    <EditText
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:hint="@string/signup_confirm"
        android:layout_below="@id/etEmail"
        android:id="@+id/etConfirm"
        android:layout_toRightOf="@id/etPassword"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/signup_signup_button"
        android:id="@+id/btnRegister"
        android:layout_below="@id/etPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/signup_login"
        android:id="@+id/btnLogin"
        android:layout_below="@id/btnRegister"/>
</RelativeLayout>